tests/neg/type_alias_use_before_decl.baa
// EXPECT: متوقع تصريح

معرف رقم = ١.
نوع معرف = ط٦٤.

صحيح الرئيسية() {
    إرجع ٠.
}
